--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <title>Alien Invasion</title>
+        <title>Frogger</title>
         <link rel="stylesheet" href="./css/base.css" type="text/css" />
         <link href='http://fonts.googleapis.com/css?family=Bangers'
             rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div id='container'>
-            <canvas id='game' width='320' height='480'></canvas>
+            <canvas id='game' width='549' height='625'></canvas>
         </div>
         <script src='./src/engine.js'></script>
         <script src='./src/game.js'></script>
